--- a/project_myeks.yaml
+++ b/project_myeks.yaml
@@ -1,13 +1,15 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
-
+ 
 metadata:
   name: project-myeks
   region: ap-northeast-2
-  version: "1.30"
-
-availabilityZones: ["ap-northeast-2a", "ap-northeast-2c"]
-
+  version: "1.22"
+ 
+# AZ
+availabilityZones: ["ap-northeast-2a", "ap-northeast-2b",  "ap-northeast-2c"]
+ 
+# IAM OIDC & Service Account
 iam:
   withOIDC: true
   serviceAccounts:
@@ -26,10 +28,12 @@ iam:
         namespace: kube-system
       wellKnownPolicies:
         autoScaler: true
-
+ 
+# Managed Node Groups
 managedNodeGroups:
+  # On-Demand Instance
   - name: production
-    instanceType: t2.micro
+    instanceType: t2.medium
     minSize: 1
     desiredCapacity: 2
     labels: { role: production }
@@ -37,8 +41,8 @@ managedNodeGroups:
     privateNetworking: true
     ssh:
       allow: true
-      publicKeyName: mykeypair
-    availabilityZones: ["ap-northeast-2a", "ap-northeast-2c"]
+      publicKeyPath: ./keypair/myssh.pub
+    availabilityZones: ["ap-northeast-2a", "ap-northeast-2b", "ap-northeast-2c"]
     iam:
       withAddonPolicies:
         autoScaler: true
