--- a/project_myeks.yaml
+++ b/project_myeks.yaml
@@ -4,7 +4,7 @@ kind: ClusterConfig
 metadata:
   name: project-myeks
   region: ap-northeast-2
-  version: "1.22"
+  version: "1.30"
  
 # AZ
 availabilityZones: ["ap-northeast-2a", "ap-northeast-2b",  "ap-northeast-2c"]
@@ -41,7 +41,7 @@ managedNodeGroups:
     privateNetworking: true
     ssh:
       allow: true
-      publicKeyPath: ./keypair/myssh.pub
+      publicKeyPath: mykeypair
     availabilityZones: ["ap-northeast-2a", "ap-northeast-2b", "ap-northeast-2c"]
     iam:
       withAddonPolicies:
